--- a/main.css
+++ b/main.css
@@ -139,6 +139,27 @@ section{
 	font-size: 1em;
 }
 
+/* Lightbox */
+
+.lightbox-bg{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.7);
+}
+
+.lightbox{
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	border-radius: 5px;
+	padding: 20px;
+}
+
 /* Masthead */
 
 .fullbg{
