--- a/main.css
+++ b/main.css
@@ -155,6 +155,7 @@ section{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	width: 300px;
 	background-color: #fff;
 	border-radius: 5px;
 	padding: 20px;
